[package]
name = "rework"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Multi-threaded task processing in the Master-Worker pattern."
repository = "https://github.com/kkaatii/rework/"
readme = "README.md"
keywords = ["task", "job", "async"]

[dependencies]
pandet = "0.2.2"
futures = "0.3"
tracing = "0.1.34"
tokio = { version = "1", features = ["rt", "time", "macros"] }
num_cpus = "1"